add users to the docker file

--- a/containers/app/Dockerfile
+++ b/containers/app/Dockerfile
@@ -6,8 +6,13 @@ ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
 RUN chmod +x /tini
 ENTRYPOINT ["/tini", "--"]
 
-# Put our index file in there
-COPY index.js index.js
+# This comes from the node container, they made a user called node
+# who could only do node things
+USER node
+
+# Put our index file in there, as we need node user to be able
+# to run it then we will also chown the file
+COPY --chown=node:node index.js index.js
 
 # run it baby
 CMD ["node", "index.js"]
