--- a/containers/app/Dockerfile
+++ b/containers/app/Dockerfile
@@ -10,9 +10,16 @@ ENTRYPOINT ["/tini", "--"]
 # who could only do node things
 USER node
 
+# we know for sure the node user owns it's own dir so
+# we make a dir called code where we will put the file
+# if dir does not exist it will make it for you
+WORKDIR /home/node/code
+
 # Put our index file in there, as we need node user to be able
 # to run it then we will also chown the file
 COPY --chown=node:node index.js index.js
+# you can also use the ADD command if you need to grab something
+# from the network like git etc
 
 # run it baby
 CMD ["node", "index.js"]
