caching the node modules

--- a/containers/appTwo/Dockerfile
+++ b/containers/appTwo/Dockerfile
@@ -13,10 +13,17 @@ RUN mkdir /home/node/code
 
 WORKDIR /home/node/code
 
-# Copy everything form here to there
-COPY --chown=node:node . .
+# copy the package and the lock file, then run yarn. This means
+# if the code changes later then we can use the modules
+# from the cache and not re-download them all the time if no
+# node modules where changed
+COPY --chown=node:node yarn.lock package.json ./
 
 # Install all the deps
 RUN yarn
+
+# Copy everything form here to there
+COPY --chown=node:node . .
+
 
 CMD [ "node",  "index.js" ]
