making it small with alpine alone

--- a/containers/alpineLinux/Dockerfile
+++ b/containers/alpineLinux/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:12-alpine
+FROM alpine:3.10
 
-# Add Tini (so we can kill it from outside)
-# ENV TINI_VERSION v0.19.0
-# ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
-# RUN chmod +x /tini
-# ENTRYPOINT ["/tini", "--"]
+# Alpine package manager (update first) get node and npm
+RUN apk add --update nodejs npm
 
+# Add a user called node in the group node
+RUN addgroup -S node && adduser -S node -G node
+
+# Switch to the node user
 USER node
 
 # so we own the dir
@@ -17,10 +18,10 @@ WORKDIR /home/node/code
 # if the code changes later then we can use the modules
 # from the cache and not re-download them all the time if no
 # node modules where changed
-COPY --chown=node:node yarn.lock package.json ./
+COPY --chown=node:node package-lock.json package.json ./
 
-# Install all the deps
-RUN yarn
+# Install all the deps, ic is from lock file
+RUN npm ic
 
 # Copy everything form here to there
 COPY --chown=node:node . .
