--- a/static-assets-project/Dockerfile
+++ b/static-assets-project/Dockerfile
@@ -1,5 +1,6 @@
 # Build stage
 FROM node:12-stretch as build
+WORKDIR /app
 
 # Install the deps
 COPY package-lock.json package.json ./
@@ -11,14 +12,9 @@ COPY . .
 # Build the project (will put everything into build)
 RUN npm run build
 
-
 # Runtime stage
-FROM nginx:latest
-
-USER nginx
-
-# WORKDIR /home/nginx
+FROM nginx:stable
 
 # we can use the nginx user that comes with the machine
-COPY --from=build --chown=nginx:nginx /build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 
